# Literate

./: .gitignore  JSONDataSample.html  LitTest.md  Literate.code-workspace  PlantWebTest.md  Presentable.code-workspace  README.md  __init__.py  all_meta.yml  census.txt  class_abstract_grammar.py  class_casing.py  class_field_type.py  class_fluent_html.py  class_grammar.py  class_md_render.py  class_pom_meta.py  class_pom_token.py  class_rules.py  class_templates.py  class_templates_revised.py  clean_markdown.py  do_graph.py  do_lark.py  do_ldm_parse.py  do_md2html.py  do_md_parse.py  do_new_git.ps1  do_parse_ldm.py  do_plantweb.py  do_pom_test.py  do_re_tests.py  do_text_markup.py  dull_handlers.py  dull_parser_classes.py  dull_parser_core.py  dull_parser_main.py  lark_tester.py  larktree.txt  ldm_creator.py  (+35 more)
AllForArchives/: class_literate_not.py  enhanced_validators.py  ldm_object_creator.py  ldm_validators_not.py  ldm_validators_v1_not.py  ldm_validators_v2_not.py
AllSpecDocs/: BlockLists.txt  TODOs.txt
AllToArchive/: class_faculty.py  class_md_render.py  class_serial.py  dict_to_html.py  dict_to_html_text_version.py  do_text_markup.py  ldm_object_creator_first.py  styles.css  util_gpaths.py  util_text_markup.py
AllToArchive2/: Literate_01_old.py  class_casing_old.py  class_pom_token_old.py
AnotherApproach/: LDMRecursive.py  Lit_01.py  class_casing.py  class_pom_token.py
NOT_larks/: blocks1.lark
_NOT_USED/: _Not_faculty_base.py  _Not_ldm_to_html.py  _Not_validate_fields.py  _What_testchecks.py
_NOT_larks/: newfields.lark  util_lark_static.py
_NOT_pom/: UNIUSED TYPE.py  do_pom_test.py  pom_parser.py
_Not_AllNotions/: dbspecs.txt
ai_apis/: class_ai_assistant.py  class_ai_claude.py  class_ai_claude_json_parser.py  class_ai_gemini_costs.py  class_ai_keys.py  (+2 more)
(+720 files in other folders)
